# DiTing

./: .gitignore  README.md  mcp_server.py  package-lock.json  package.json  pyproject.toml  start.mjs
.github/workflows/: build-release.yml
app/: server.py
app/api/v1/: api.py
app/asr/: client.py  openai_asr.py
app/core/: config.py  logger.py  task_manager.py
app/db/: __init__.py  asr_config.py  llm_config.py  media_cache_entries.py  migrations.py  qa.py  schema.py  search.py  seed.py  transcriptions.py  video_meta.py  video_notes.py
app/downloaders/: _utils.py  douyin.py  youtube.py
app/schemas/: settings.py  transcribe.py
app/services/: cache_task.py  llm.py  media_cache.py  video_service.py
app/services/transcription/: __init__.py  dispatcher.py  pipeline.py  request_service.py
app/utils/: datetime_utils.py  media_utils.py  preprocessing.py  process_utils.py  source_utils.py
asr_worker/: config.py  main.py
asr_worker/engines/: base.py  qwen3asr.py  sensevoice.py  whisper.py
asr_worker/management/: __init__.py  catalog.py  constants.py  dep_manager.py  engine_loader.py  model_downloader.py  model_state.py  routes.py
asr_worker/management/hardware/: __init__.py  cuda.py  detector.py  mps.py
doc/: mindmap-shortcuts-en.md  mindmap-shortcuts-zh.md
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  wizard.html  worker-manager.html
frontend/src/: index.css  main.tsx
frontend/src-wizard/: WizardApp.tsx  i18n.ts  main.tsx
frontend/src-wizard/steps/: ASRWorkerStep.tsx  BilibiliStep.tsx  DoneStep.tsx  FFmpegStep.tsx  LLMSetupStep.tsx  WelcomeStep.tsx
frontend/src-worker-manager/: WorkerManagerApp.tsx  constants.ts  main.tsx  network.ts  types.ts  utils.ts
frontend/src-worker-manager/components/: WorkerDashboard.tsx  WorkerWizard.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AISummaryModal.tsx  AddVideoModal.tsx  BulkActionToolbar.tsx  DetailPanel.tsx  HardwareInfoCard.tsx  Header.tsx  MindmapPanel.tsx  ModelCatalogList.tsx  NoteView.tsx  OperationProgress.tsx  QAPanel.tsx  VideoCard.tsx  (+8 more)
scripts/: build_sidecar.py  build_worker_manager.py  run_tray.py  worker_manager_entry.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-worker/: Cargo.toml  tauri.conf.json
src-tauri-worker/capabilities/: default.json
src-tauri-worker/src/: constants.rs  hardware.rs  installer.rs  lib.rs  main.rs  manager_state.rs  paths.rs  worker.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
userscripts/: userscript.js
worker_manager/: __init__.py  __main__.py  constants.py  i18n.py  main.py  platform_utils.py
worker_manager/catalog/: __init__.py  models.py  recommender.py
worker_manager/gui/: __init__.py  app.py
worker_manager/hardware/: cuda.py
worker_manager/installer/: __init__.py  environment.py  model_downloader.py  pipeline.py  uv_manager.py
worker_manager/worker/: __init__.py  config_writer.py  health_checker.py  process_manager.py
(+59 files in other folders)
