[package]
name = "diting-worker-manager"
version = "0.1.0"
description = "DiTing Worker Manager - install and manage ASR Worker"
authors = ["DiTing"]
edition = "2021"

[lib]
name = "diting_worker_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "fs", "io-util"] }
thiserror = "2"
serde_yaml = "0.9"
dirs = "6"
once_cell = "1"
tauri-plugin-dialog = "2.6.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_SystemInformation"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
